# labs_cpp

./: .gitignore  README.md
Lab1/: Board.cpp  Board.h  CellGenerator.h  Experiment.cpp  Experiment.h  main.cpp
Lab1Variant8/: Board.cpp  Board.h  CMakeLists.txt  CellGenerator.cpp  CellGenerator.h  Experiment.cpp  Experiment.h  Statistics.cpp  Statistics.h  main.cpp
Lab2/: ResultNoOptimization.txt
Lab2Variant2/: CMakeLists.txt  CustomParallel.h  Result.md  ResultMaxOptimization.txt  ResultNoOptimization.txt  Timer.h  main.cpp
Lab3Variant3/: CMakeLists.txt  main.cpp  results.txt
Lab4/: main.cpp
Lab4Variant2/: CMakeLists.txt  Generator.h  ThreadData.h
Lab5/: CMakeLists.txt  main.cpp
Lab6/: CMakeLists.txt  main.cpp
Lab6Variant2/: main.cpp
